--- a/BM-core_v3/pom.xml
+++ b/BM-core_v3/pom.xml
@@ -6,6 +6,12 @@
   <name>BM-core</name>
   <!--<packaging>pom</packaging>-->
   
+  <parent>
+  	<groupId>org.springframework.boot</groupId>
+  	<artifactId>spring-boot-starter-parent</artifactId>
+  	<version>2.0.2.RELEASE</version>
+  </parent>
+  
   <build>
   <plugins>
   
@@ -16,7 +22,7 @@
 	  <archive>
 	    <manifest>
 			<addClasspath>false</addClasspath>
-			<mainClass>bm.main.BusinessMachine</mainClass>
+			<mainClass>bm.main.Maestro</mainClass>
 			<!--<classpathPrefix>lib/</classpathPrefix>-->
 	    </manifest>
 	  </archive>
@@ -102,20 +108,44 @@
         <id>Eclipse Paho Repo</id>
         <url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
     </repository>
+    <repository>
+        <id>spring-snapshots</id>
+        <name>Spring Snapshots</name>
+        <url>https://repo.spring.io/libs-snapshot</url>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+    </repository>
   </repositories>
 
   <dependencies>
+  	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <optional>true</optional>
+    </dependency>
+  
+  
   	<dependency>
 		<groupId>jdom</groupId>
 		<artifactId>jdom</artifactId>
 		<version>1.1</version>
     </dependency>
   	<dependency>
-    	<groupId>commons-logging</groupId>
-    	<artifactId>commons-logging</artifactId>
-    	<version>1.2</version>
+    		<groupId>commons-logging</groupId>
+    		<artifactId>commons-logging</artifactId>
+    		<version>1.2</version>
 	</dependency>
     <dependency>
+    
         <groupId>org.eclipse.paho</groupId>
         <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
         <version>1.1.1</version>
@@ -124,13 +154,28 @@
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>5.0.4.RELEASE</version>
+        <version>5.1.0.BUILD-SNAPSHOT</version>
     </dependency>
 	
 	<dependency>
     		<groupId>log4j</groupId>
     		<artifactId>log4j</artifactId>
     		<version>1.2.17</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+	<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-webmvc</artifactId>
+    		<version>5.1.0.BUILD-SNAPSHOT</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+	<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>servlet-api</artifactId>
+    		<version>3.0-alpha-1</version>
+    		<scope>provided</scope>
 	</dependency>
 	
 	<!--
