Added JEEPManager and CIRManager.

--- a/BM-core_v3/configuration/bm.properties
+++ b/BM-core_v3/configuration/bm.properties
@@ -6,8 +6,8 @@ bm.buildDate=2017
 bm.system.timerRefresh=5000
 bm.pwd=ZQWOYIP5RA\=JTN6LGjeD14FVPpYDG/0MsbeBXA\=\=
 
-comms.resendTime=5
-comms.resendTimout=60
+comms.resendTime=5000
+comms.resendTimeout=60000
 
 id.rid.length=10
 id.cid.length=4
@@ -95,7 +95,7 @@ table.productproperties=comproplist
 cir.filepath=cir/rules.cir
 cir.file.versions=10
 
-req.params.pwd=pwd
+req.requestParams.pwd=pwd
 
 rty.registration=register
 rty.poop=poop
@@ -111,6 +111,10 @@ registration.param.name=name
 registration.param.productID=prodID
 registration.param.roomID=roomID
 registration.param.props=properties
+registration.response.param.id=id
+registration.response.param.topic=topic
+
+detachment.request.param.msg=msg
 
 poop.param.propertyID=property
 poop.param.propertyValue=value
