Added productless registration

--- a/BM-core_v3/configuration/bm.properties
+++ b/BM-core_v3/configuration/bm.properties
@@ -111,6 +111,12 @@ registration.param.name=name
 registration.param.productID=prodID
 registration.param.roomID=roomID
 registration.param.props=properties
+registration.param.proplist=proplist
+registration.param.icon=icon
+registration.param.proplist.ptype=ptype
+registration.param.proplist.name=name
+registration.param.proplist.mode=mode
+registration.param.proplist.index=index
 registration.response.param.id=id
 registration.response.param.topic=topic
 
