--- a/BM-core_v3/pom.xml
+++ b/BM-core_v3/pom.xml
@@ -89,10 +89,10 @@
   <resources>
       <resource>
           <directory>configuration</directory>
-          <excludes>
-          	<exclude>**/*.properties</exclude>
-          	<exclude>**/*.xml</exclude>
-          </excludes>
+          <!--<excludes>-->
+          	<!--<exclude>**/*.properties</exclude>-->
+          	<!--<exclude>**/*.xml</exclude>-->
+          <!--</excludes>-->
       </resource>
       <resource>
           <directory>configuration/spring</directory>
